compiler/testData/diagnostics/tests/dataClasses/notADataClass.kt
class A(val x: Int, val y: String)

fun foo(a: A) {
    a.<!UNRESOLVED_REFERENCE!>component1<!>()
    a.<!UNRESOLVED_REFERENCE!>component2<!>()
}
